fix z-index

--- a/css/reveal.scss
+++ b/css/reveal.scss
@@ -1073,7 +1073,7 @@ $controlsArrowAngleActive: 36deg;
 	background: black;
 	visibility: hidden;
 	opacity: 0;
-	z-index: 99;
+	z-index: 100;
 	transition: all 1s ease;
 }
 
@@ -1456,7 +1456,7 @@ $controlsArrowAngleActive: 36deg;
 	bottom: var(--r-overlay-margin);
 	left: var(--r-overlay-margin);
 	border-radius: min( var(--r-overlay-margin), 6px );
-	z-index: 1000;
+	z-index: 99;
 	background: rgba( 0, 0, 0, 0.95 );
 	backdrop-filter: blur( 10px );
 	transition: all 0.3s ease;
